--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.8",
-    "uuid": "^11.1.0"
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
