--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.23.0",
     "@tailwindcss/vite": "^4.0.8",
+    "clerk": "^0.8.3",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
