--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
     "clerk": "^0.8.3",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
+    "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "uuid": "^11.1.0",
     "tailwindcss": "^4.0.8",
-    "uuid": "^11.1.0"
+    "uay-react-tailwind-gantt": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
