--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "uuid": "^11.1.0",
     "tailwindcss": "^4.0.8",
-    "uay-react-tailwind-gantt": "^1.0.0"
+    "uay-react-tailwind-gantt": "^1.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
