--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "uuid": "^11.1.0",
     "tailwindcss": "^4.0.8",
-    "uay-react-tailwind-gantt": "^1.0.0"
+    "uay-react-tailwind-gantt": "^1.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
