--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-emoji-picker": "^1.0.13",
