--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "emoji-mart": "^5.6.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
