--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
     "react-color": "^2.19.3",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.5.0",
