--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.8.4",
     "clerk": "^0.8.3",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
