--- a/PlanWise/pom.xml
+++ b/PlanWise/pom.xml
@@ -44,7 +44,28 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version> <!-- Use the latest version -->
+			<scope>provided</scope>
+    	</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+	
+   <dependency>
+     <groupId>org.apache.commons</groupId>
+     <artifactId>commons-math3</artifactId>
+     <version>3.6.1</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
