--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "clerk": "^0.8.3",
     "date-fns": "^4.1.0",
@@ -22,6 +23,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "postcss": "^8.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
@@ -32,7 +34,7 @@
     "react-emoji-picker": "^1.0.13",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.0.14",
     "uay-react-tailwind-gantt": "^1.0.0",
     "uuid": "^11.1.0"
   },
