--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^12.4.7",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "postcss": "^8.5.3",
@@ -32,6 +34,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-emoji-picker": "^1.0.13",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.14",
