--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
+    "@vitalets/google-translate-api": "^9.2.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "clerk": "^0.8.3",
