--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.23.0",
+    "@clerk/localizations": "^3.13.4",
     "@clerk/themes": "^2.2.19",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
