--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PlanWise
 spring.datasource.url=jdbc:mysql://localhost:3306/PlanWise
 spring.datasource.username=root
-spring.datasource.password=Admin_123
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
