--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=PlanWise
 spring.datasource.url=jdbc:mysql://localhost:3306/PlanWise
 spring.datasource.username=root
-spring.datasource.password=$Ozan2004*
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+logging.level.com.backend.PlanWise=DEBUG
