--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -1,9 +1,41 @@
 spring.application.name=PlanWise
 spring.datasource.url=jdbc:mysql://localhost:3306/PlanWise
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=Kanataka00_
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 logging.level.com.backend.PlanWise=DEBUG
+
+file.upload-dir=/Users/AkmatovArtur/Documents/GitHub/Project-Management-System/PlanWise/uploads
+
+# Email settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aiana.mederbek@gmail.com
+spring.mail.password=wjfycniqatsxnhxx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+
+# Logging settings
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.planwise.service.EmailService=DEBUG
+logging.level.org.springframework.mail.javamail.JavaMailSender=DEBUG
+logging.level.com.sun.mail=DEBUG
+
+# Base URL for invitation links
+app.base-url=http://localhost:3000
+
+# Database settings
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
