--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=PlanWise
 spring.datasource.url=jdbc:mysql://localhost:3306/PlanWise
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 logging.level.com.backend.PlanWise=DEBUG
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
