Finished: General Settings, Access control, Operations with Teams, Operations with Members, Project Teams part

--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -10,32 +10,18 @@ logging.level.com.backend.PlanWise=DEBUG
 
 file.upload-dir=/Users/AkmatovArtur/Documents/GitHub/Project-Management-System/PlanWise/uploads
 
-# Email settings
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=aiana.mederbek@gmail.com
-spring.mail.password=wjfycniqatsxnhxx
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-spring.mail.properties.mail.debug=true
-spring.mail.properties.mail.smtp.ssl.trust=*
-spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
-# Logging settings
-logging.level.org.springframework.mail=DEBUG
-logging.level.com.planwise.service.EmailService=DEBUG
-logging.level.org.springframework.mail.javamail.JavaMailSender=DEBUG
-logging.level.com.sun.mail=DEBUG
 
-# Base URL for invitation links
-app.base-url=http://localhost:3000
 
 # Database settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.enabled=false
+
+
+# # Clerk Configuration
+# clerk.jwt.verification.key=your_clerk_jwt_verification_key
+# clerk.api.key=your_clerk_api_key
