Chats Now Work w Sockets
-Chats now use sockets to have continuous data flow from and to the backend.

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@clerk/themes": "^2.2.19",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.0.8",
     "@vitalets/google-translate-api": "^9.2.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "clerk": "^0.8.3",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^12.4.7",
     "i18next": "^24.2.3",
@@ -39,6 +41,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.0.14",
     "uay-react-tailwind-gantt": "^1.0.0",
     "uuid": "^11.1.0"
