--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=PlanWise
-spring.datasource.url=jdbc:mysql://localhost:3306/PlanWise
+spring.datasource.url=jdbc:mysql://localhost:3306/PlanWise?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,6 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 logging.level.com.backend.PlanWise=DEBUG
+spring.jackson.serialization.write-dates-as-timestamps=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
