--- a/PlanWise/src/main/resources/application.properties
+++ b/PlanWise/src/main/resources/application.properties
@@ -4,10 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-http-form-post-size=15MB
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
 logging.level.com.backend.PlanWise=DEBUG
 spring.jackson.serialization.write-dates-as-timestamps=false
+logging.level.org.springframework.web.socket=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
